[package]
name = "custos"
version = "0.7.0"
edition = "2021"
license = "MIT"
description = "A minimal OpenCL, WGPU, CUDA and host CPU array manipulation engine."
repository = "https://github.com/elftausend/custos"
keywords = ["gpu", "autodiff", "arrays", "deep-learning", "fixed-size"]
categories = ["science", "mathematics", "no-std", "external-ffi-bindings"]
readme = "README.md"
rust-version = "1.69"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cuwanto-client = { path = "../cuwanto/cuwanto-client", optional = true }
#cuwanto-server = {path="../cuwanto/cuwanto-server", optional=true}
#min-cl = { version = "0.2.0", optional=true }
min-cl = { path="../min-cl", optional=true }

# WGPU deps
futures-intrusive = {version="0.5.0", optional=true}
pollster = {version="0.3", optional=true }
wgpu = {version="0.15", optional=true }

custos-macro = {path = "../custos-macro", optional=true}
#custos-macro = {git = "https://github.com/elftausend/custos-macro", optional=true}
#custos-macro = {version = "0.1.1", optional=true}

# no-std float math
libm = { version="0.2.6", optional = true }

ash = { version = "0.37", optional = true } 
naga = { version = "0.13", features = ["wgsl-in", "spv-out"], optional = true } 

half = {version = "2.3", default-features = false, optional = true} 

[build-dependencies]
min-cl = { path="../min-cl", optional=true }
#min-cl = { version = "0.2.0", optional=true }

[features]
#default = ["no-std"]
default = ["blas", "cpu", "macro", "stack", "cuda", "opencl", "autograd", "vulkan", "wgsl"]
#default = ["stack", "macro", "cpu", "blas", "opencl", "static-api", "autograd"]
#default = ["stack", "cpu", "blas", "static-api", "opencl", "macro"]
cpu = []
opencl = ["dep:min-cl", "cpu"]
#network = ["cuwanto-client"]
cuda = []
opt-cache = []
blas = []
static-api = ["cpu"]
stack = []
no-std = ["stack", "dep:libm"]
wgpu = ["dep:wgpu", "dep:pollster", "dep:futures-intrusive"]
macro = ["dep:custos-macro"]

# modules
autograd = ["cached"]
lazy = []
cached = []

half = ["dep:half"]

vulkan = ["dep:ash", "dep:naga"]
wgsl = []

[dev-dependencies]
#custos-macro = {git = "https://github.com/elftausend/custos-macro"}
custos-macro = {path = "../custos-macro"}
#custos-macro = {version = "0.1.1"}

[[example]]
name = "cuda_readme"
required-features = ["cuda"]

[[example]]
name = "cpu_readme"
required-features = ["cpu"]

[[example]]
name = "cl_readme"
required-features = ["opencl"]

[[example]]
name = "wgpu"
required-features = ["wgpu"]

[[example]]
name = "static-api"
required-features = ["static-api", "opencl"]

[[example]]
name = "unified_memory"
required-features = ["opencl"]

[[example]]
name = "opencl_kernel_launch"
required-features = ["opencl"]

[[example]]
name = "read"
required-features = ["cpu"]

[[example]]
name = "fixed-size-stack"
required-features = ["cpu", "stack"]

[[example]]
name = "mul_buf_cpu_impl"
required-features = ["cpu"]

[[test]]
name = "opencl_unified"
required-features = ["opencl"]

[[test]]
name = "cl_kernel_launch"
required-features = ["opencl"]

[[test]]
name = "network_device"
required-features = ["network"]

#[[bench]]
#name = "fixed_size_vs_vec"
#harness = false

[[bench]]
name = "cache_adv"
harness = false

[[bench]]
name = "alloc"
harness = false

#[[bench]]
#name = "gemm"
#harness = false
#required-features = ["opencl", "cuda"]

#[[bench]]
#name = "cuda_vs_opencl"
#harness = false
#required-features = ["opencl", "cuda"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
