[package]
name = "custos-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custos = { path = "../" }
criterion = "0.5"
fastrand = "2.0.0"

[[bench]]
name = "hashmap_key_compare"
harness = false

[[bench]]
name = "caching_speed"
harness = false