[package]
name = "demo_operations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custos = {path = "../../", default-features=false, features=["cpu", "stack"]}
custos-macro = {path = "../../../custos-macro"}

[features]
default = ["cpu", "stack"]
opencl = []
cpu = []
stack = []